fixed on iOS

--- a/client/css/widgets/scoreboard.css
+++ b/client/css/widgets/scoreboard.css
@@ -39,6 +39,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+  word-break: normal;
   writing-mode: tb-rl;
   transform: rotate(180deg);
 }
